# ColumbiaCourseProjects

./: .gitignore  CONTRIBUTING.md  Makefile  README  README.md  pyproject.toml
HUDK 4050/: ICE0.ipynb
HUDK 4050/Analysis Challenge Assignment 1/: Analysis_Challenge_Assignment_1.ipynb
HUDK 4050/Analysis_Challenge_Assignment 1/: .ACA1_dataset.zip.icloud  .CollegeScorecard.csv.icloud  Analysis Challenge Assignment 1.ipynb  Analysis_Challenge_Assignment_1.ipynb
HUDK 4050/Analysis_Challenge_Assignment 2/: .Analysis_Challenge_Assignment_2-2.html.icloud  .Analysis_Challenge_Assignment_2-2.ipynb.icloud  Analysis_Challenge_Assignment_2-2.html  Analysis_Challenge_Assignment_2-2.ipynb
HUDK 4050/Analysis_Challenge_Assignment 4/: ACA4.ipynb
HUDK 4050/ICE1/: ICE1.ipynb
HUDK 4050/ICE2/: ICE2.ipynb
HUDK 4050/ICE3/: ICE03 - Regression in prediction.ipynb
HUDK 4050/ICE5/: ICE5.ipynb
HUDK 4050/ICE6/: ICE6.ipynb
HUDK 4050/ICE7/: ICE7.ipynb
HUDK 4050/ICE8/: ICE8.ipynb  ICE8_Python_ZLiu.html
HUDK 4054/: PTSD_Outcoems_README.txt  PTSD_Outcomes_Within_Each_Treatment_Arm.csv
HUDM 4125/: .Midterm1 Cheat Sheet 2.pdf.icloud  .Midterm1 Cheat Sheet.pdf.icloud
HUDM 5026/: POTD 07.Rmd  POTD-07.html
HUDM 5122/: cheat sheet.docx
ITSF 5035/: FINAL Media Analysis Assignment summary Spring 2022.pptx  HUDK4054 Reading II.docx  HUDK4054 Reflection Paper III.docx  ITSF5035 Assignment3.docx  Media Content Analysis.docx
portfolio/: catalog.json  catalog.md
portfolio_tools/: catalog_builder.py  cli.py
scripts/: build_catalog.py
tests/: test_catalog_builder.py
(+39 files in other folders)
