[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-analytics-portfolio-tools"
version = "0.1.0"
description = "Cataloging utilities for a learning analytics portfolio repository."
requires-python = ">=3.10"

[project.scripts]
build-learning-catalog = "portfolio_tools.cli:main"

[tool.setuptools]
packages = ["portfolio_tools"]
